@startuml
hide empty methods
skinparam dpi 100

object Main


class DataObject<T>
{
  
}

class DataContainer
{
  
}
note left: Organizes data into categories


package BufrReader <<Folder>>
{
  package Query <<Folder>> 
  {
    class File
    {
    }
  }

  class BufrParser
  {
    +BufrParser(conf)
    +parse() : DataContainer
    +mpiParse(comm) : DataContainer
  }

  class BufrDescription
  {
  }

  package Exports <<Folder>>
  {
    package Splits
    {
    }

    package Filters
    {
    }

    package Variables
    {
      package Transforms
      {
      }
    }
  }
}

package encoders <<Folder>>
{
    package netcdf <<Folder>>
    {
      class Encoder
      {
        +Encoder(conf)
        +encode(DataContainer, outpath, bool)
      }

      class Description
      {
      }
     }
}


Main --> BufrParser
Main --> Encoder
DataContainer <-- Main

File <-- BufrParser
BufrDescription <-* BufrParser
Description <-* Encoder
BufrParser ..> Exports

DataContainer *-> "*" DataObject

@enduml

